@startuml
title Modelo de datos - limitadorum

class User {
    - Long id
    - String username
    - String email
    - Boolean active
}

class Role {
    - Long id
    - String description
}

class UserData {
    - Long id
    - String firstName
    - String lastName
    - String address
    - String phoneNumber
}

User "1" --* "1" UserData
User "n" -- "m" Role
@enduml
